@@ -2,7 +2,15 @@ import logging
 
 from normcap.clipboard.models import Handler, HandlerProtocol
 
-from .handlers import pbcopy, qtclipboard, windll, wlclipboard, xclip, xsel
+from .handlers import (
+    pbcopy,
+    qtclipboard,
+    qtclipboard_wayland,
+    windll,
+    wlclipboard,
+    xclip,
+    xsel,
+)
 
 logger = logging.getLogger(__name__)
 
@@ -17,6 +25,7 @@ _clipboard_handlers: dict[Handler, HandlerProtocol] = {
     Handler.PBCOPY: pbcopy,
     Handler.QT: qtclipboard,
     Handler.XSEL: xsel,
+    Handler.QT_WAYLAND: qtclipboard_wayland,
     Handler.XCLIP: xclip,
     Handler.WLCLIPBOARD: wlclipboard,
 }
